# typenow

./: README.md  pyproject.toml
tests/: test_typenow.py
typenow/: main.py
